Fix brick edges overlapping

--- a/client/styles/breakout/components/breakout.less
+++ b/client/styles/breakout/components/breakout.less
@@ -34,8 +34,4 @@
   .paddle {
     fill: @breakout-paddle;
   }
-
-  .brick {
-    stroke-width: 0.03px;
-  }
 }
